# einked

./: Cargo.toml  README.md  justfile
crates/einked-ereader/: Cargo.toml
crates/einked-ereader/src/: embedded_fonts.rs  epub_cache.rs  feed.rs  feed_browser.rs  lib.rs
crates/einked-minireader/: Cargo.toml
crates/einked-minireader/src/: lib.rs
crates/einked-sim-desktop/: Cargo.toml
crates/einked-sim-desktop/src/: main.rs
crates/einked-sim-web/: Cargo.toml  index.html  style.css
crates/einked-sim-web/src/: lib.rs
crates/einked-ui-harness/: Cargo.toml
crates/einked-ui-harness/src/: lib.rs  shared_bytes_reader.rs
crates/einked-ui-harness/tests/: memory_budget.rs  ui_regression.rs
docs/: migration-parity-audit.md  ui-harness.md  v1-status.md
einked-macros/: Cargo.toml
einked-macros/src/: lib.rs
src/: activity_stack.rs  core.rs  dsl.rs  input.rs  layout.rs  lib.rs  pipeline.rs  refresh.rs  render_ir.rs  storage.rs  test_display.rs
src/ui/: activity.rs  components.rs  helpers.rs  mod.rs  runtime.rs  theme.rs
