[package]
name = "einked-ereader"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["einked/std", "dep:epub-stream", "dep:epub-stream-render", "dep:epub-stream-embedded-graphics"]
reader-only = []

[dependencies]
einked = { path = "../..", features = ["alloc"] }
epub-stream = { path = "../../../epub-stream", package = "epub-stream", optional = true }
epub-stream-render = { path = "../../../epub-stream/crates/epub-stream-render", package = "epub-stream-render", optional = true }
epub-stream-embedded-graphics = { path = "../../../epub-stream/crates/epub-stream-embedded-graphics", package = "epub-stream-embedded-graphics", optional = true }
log = "0.4"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
feed-rs = "2.3.1"
ureq = { version = "3.2", default-features = true }
url = "2"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.51", default-features = false, features = ["std"] }
